@@ -97,6 +97,8 @@ The rules for this file:
     C-compiler (clang) (Issue 142) although they will not get a parallel
     version of distance_array.
   * PDB with blank lines gave IndexError (Issue 158)
+  * fixed AtomGroup.ts Timestep instance not containing all available 
+    information (Issue 163)
   * fixed Timestep copy method returning a base Timestep rather than 
     appropriate format (Issue 164) 
 
